--- a/app/main.css
+++ b/app/main.css
@@ -1,7 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap");
 @import "tailwindcss";
 
-* {
+*:not(.fa):not(.fab):not(.far):not(.fas):not(.fal):not(.fad):not(.fak) {
   font-family: 'Inter', ui-sans-serif, system-ui, sans-serif !important;
 }
 
@@ -68,6 +68,10 @@ nav a {
   transition: background-color 0.3s;
 }
 
+nav a:hover {
+  color: #b340e0;
+}
+
 .social-icons {
   float: right;
   margin-top: 20px;
@@ -78,6 +82,28 @@ nav a {
   margin: 0 10px;
   font-size: 24px;
   transition: color 0.3s;
+}
+
+.social-icons i {
+  display: inline-block;
+  font-style: normal;
+  font-variant: normal;
+  text-rendering: auto;
+  line-height: 1;
+}
+
+.fab {
+  font-family: "Font Awesome 6 Brands" !important;
+}
+
+.fa, .fas {
+  font-family: "Font Awesome 6 Free" !important;
+  font-weight: 900;
+}
+
+.far {
+  font-family: "Font Awesome 6 Free" !important;
+  font-weight: 400;
 }
 
 .social-icons a:hover {
