--- a/app/project.css
+++ b/app/project.css
@@ -1,11 +1,9 @@
-@import "./main.css";
 @import "./home.css";
 
 .projects-container {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
     gap: 20px;
-    animation: fadeIn 1s ease-in-out;
     padding: 2rem;
 }
 
@@ -24,6 +22,7 @@
 .project-detail h1 {
   color: #40E0D0;
   margin-bottom: 1rem;
+  font-size: 2.5rem;
 }
 
 .project-meta {
@@ -57,17 +56,7 @@
   color: #40E0D0;
   padding: 0.25rem 0.75rem;
   border-radius: 20px;
-  font-size: 0.875rem;
-  font-weight: 500;
-}
-
-.project-detail-image {
-  width: auto;
-  max-width: 600px;
-  height: 50%;
-  border-radius: 10px;
-  margin: 2rem 0;
-  object-fit: cover;
+  font-size: 0.875rem;  font-weight: 500;
 }
 
 .project-description {
@@ -127,6 +116,7 @@
 .project h3 {
   color: #40E0D0;
   margin-bottom: 0.5rem;
+  font-size: 1.5rem;
 }
 
 .project p {
