--- a/app/main.css
+++ b/app/main.css
@@ -5,10 +5,18 @@
   font-family: 'Inter', ui-sans-serif, system-ui, sans-serif !important;
 }
 
+html {
+  overflow-x: hidden;
+}
+
 body {
   background-color: #000000;
   min-height: 100vh;
   font-family: 'Inter', ui-sans-serif, system-ui, sans-serif !important;
+  overflow-x: hidden;
+  width: 100%;
+  max-width: 100vw;
+  box-sizing: border-box;
 }
 
 h1 {
