--- a/app/experience.css
+++ b/app/experience.css
@@ -27,6 +27,13 @@
     font-size: 3rem;
 }
 
+.experience-position {
+    color: #B340E0;
+    margin: 0.5rem 0 0 0;
+    font-size: 1.5rem;
+    font-weight: 600;
+}
+
 .experience-detail-title-image {
     width: 50px;
     height: 50px;
@@ -337,9 +344,26 @@
     padding: 0.15rem 0.5rem;
     white-space: nowrap;
   }
-  
-  .experience-detail {
+    .experience-detail {
     padding: 0 0.5rem;
+  }
+  
+  .experience-detail-header {
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    gap: 1rem;
+  }
+  
+  .experience-detail-header h1 {
+    font-size: 2rem;
+    text-align: center;
+  }
+  
+  .experience-position {
+    font-size: 1.2rem;
+    text-align: center;
+    margin: 0.25rem 0 0 0;
   }
   
   .experience-header {
